--- a/development-1/posc1020-lecture-development-1.Rmd
+++ b/development-1/posc1020-lecture-development-1.Rmd
@@ -138,7 +138,7 @@ Intuition behind the "resource curse":
 - States rich in primary commodities tend to generate most income from foreign receipts.
 - This decreases incentive to innovate to improve productive capacities.
 
-Recall our previous example of Northern Rhodesia/Zimbabwe and South Korea.
+Recall our previous example of Northern Rhodesia/Zambia and South Korea.
 
 ###
 
