--- a/development-1/posc1020-lecture-development-1.Rmd
+++ b/development-1/posc1020-lecture-development-1.Rmd
@@ -40,6 +40,7 @@ library(stevemisc)
 # library(maddison)
 
 library(fredr)
+library(stevedata)
 
 Colhist <- read_csv("~/Dropbox/data/icow/ICOW Colonial History 1.0/coldata100.csv")
 ```
@@ -167,7 +168,7 @@ scgdpb = 183873000000/1000000000 # https://www.deptofnumbers.com/gdp/south-carol
 scgdppc = 37063
 
 
-my_subtitle = paste0("There are some conspicuous states in here, but: the median GDP per capita is ", prettyNum(round(mediangdppc, 2),",")," USD and the median GDP (", mediangdpb," billion USD) is less than half the GDP of South Carolina.")
+my_subtitle = paste0("There are some conspicuous states in here, but the median GDP per capita is ", prettyNum(round(mediangdppc, 2),",")," USD and the median GDP (", mediangdpb," billion USD) is less than half the GDP of South Carolina.")
 
 top10_oilstates %>%
   ggplot(.,aes(reorder(country, -oilrent), oilrent)) + theme_steve_web() +
@@ -209,20 +210,65 @@ tribble(
 ###
 
 ```{r resource-curse-illustration, echo=F, eval=T, fig.width = 14, fig.height = 8.5, warning = F, message = F}
-WDI(country = "all", indicator = c("NY.GDP.MKTP.KD", "NY.GDP.PETR.RT.ZS"),
-    start = 1960, end = 2016, extra = FALSE, cache = NULL) %>%
-  rename(gdppc = `NY.GDP.MKTP.KD`,
-         oilrent = `NY.GDP.PETR.RT.ZS`)  %>%
-  mutate(Country = country,
-         loggdppc = log(gdppc + 1),
-         logoil = log(oilrent + 1)) %>%
-  ggplot(.,aes(logoil, loggdppc)) + theme_steve_web() +
-  geom_point(size=2) + geom_smooth(method="loess", size=2) +
+
+WDI(country = "all", indicator = c("NY.GDP.PCAP.KD", "NY.GDP.PETR.RT.ZS"),
+    start = 1960, end = 2019) %>%
+  rename(gdppc = `NY.GDP.PCAP.KD`,
+         oilrent = `NY.GDP.PETR.RT.ZS`) %>%
+  as_tibble() %>%
+  mutate(ccode = countrycode::countrycode(country, "country.name", "cown"),
+         ccode = ifelse(country == "Serbia", 345, ccode)) -> oilrents
+
+
+oilrents %>% filter(!is.na(ccode)) %>%
+  #filter(between(year, 1990, 1999)) %>%
+  mutate(oilrentcat = floor((oilrent)/10),
+         oilrentcat = case_when(
+           oilrentcat == 0 ~ "0-9%",
+           oilrentcat == 1 ~ "10-19%",
+           oilrentcat == 2 ~ "20-29%",
+           oilrentcat == 3 ~ "30-39%",
+           oilrentcat == 4 ~ "40-49%",
+           oilrentcat == 5 ~ "50%\nor More",
+           oilrentcat == 6 ~ "50%\nor More",
+           oilrentcat == 7 ~ "50%\nor More",
+           oilrentcat == 8 ~ "50%\nor More",
+           oilrentcat == 9 ~ "50%\nor More",
+         ),
+         decade = paste0((year %/% 10) * 10,"s")) %>% # filter(decade == "2010s") %>% 
+  group_by(decade, oilrentcat) %>%
+  summarize(mean = mean(gdppc, na.rm=T),
+            sd = sd(gdppc, na.rm=T),
+            se = sd/n()) %>% na.omit %>%
+  ggplot(.,aes(oilrentcat, mean, ymin=mean-(z95*se), ymax=mean+(z95*se))) + 
+  geom_pointrange() + facet_wrap(~decade, scales="free_x") +
+  theme_steve_web() +
+  scale_y_continuous(labels = scales::dollar) +
   labs(caption = "Data: World Bank",
-       title = "Less Developed Countries Tend to Be Better Endowed in Natural Resources",
-       subtitle = "We call this the ''resource curse'' in the development literature.") +
-#  scale_x_continuous(breaks = seq(1960, 2015, by = 5)) +
-  ylab("GDP (Logged)") + xlab("Oil Rents (Logged)")
+       title = "Oil Rentier States Seem to Be Less Developed than States Who Don't Rely as Much on Oil Exports",
+       subtitle = "We call this the ''resource curse'' in the development literature, though it seems to affect the top rentier states (and less so right now).",
+       y = "Mean GDP per Capita in 2010 USD (with Standard Error Bounds)",
+       x = "Oil Rents (% GDP)")
+
+#   group_by()
+#   ggplot(.,aes(oilrent, gdppc)) +
+#   geom_point() + geom_smooth(method="loess", size=2) 
+# 
+# 
+# WDI(country = "all", indicator = c("NY.GDP.MKTP.KD", "NY.GDP.PETR.RT.ZS"),
+#     start = 1960, end = 2016, extra = FALSE, cache = NULL) %>%
+#   rename(gdppc = `NY.GDP.MKTP.KD`,
+#          oilrent = `NY.GDP.PETR.RT.ZS`)  %>%
+#   mutate(Country = country,
+#          loggdppc = log(gdppc + 1),
+#          logoil = log(oilrent + 1)) %>%
+#   ggplot(.,aes(logoil, loggdppc)) + theme_steve_web() +
+#   geom_point(size=2) + geom_smooth(method="loess", size=2) +
+#   labs(caption = "Data: World Bank",
+#        title = "Less Developed Countries Tend to Be Better Endowed in Natural Resources",
+#        subtitle = "We call this the ''resource curse'' in the development literature.") +
+# #  scale_x_continuous(breaks = seq(1960, 2015, by = 5)) +
+#   ylab("GDP (Logged)") + xlab("Oil Rents (Logged)")
 ```
 
 # Are Rich Countries Responsible for LDCs?
@@ -320,44 +366,12 @@ Generally, the terms of trade works against LDCs.
 ###
 
 ```{r coffee-consumption-since-1990, echo=F, eval=T, fig.width = 14, fig.height = 8.5, warning = F, message = F}
-# Check directory for PDF.
-
-tribble(
-  ~Year, ~Value,
-  1990, 74131,
-  1991, 71282,
-  1992, 79216,
-  1993, 77120,
-  1994, 75024,
-  1995, 72371,
-  1996, 77854,
-  1997, 81063,
-  1998, 82767,
-  1999, 85432,
-  2000, 87642,
-  2001, 88950,
-  2002, 91266,
-  2003, 93394,
-  2004, 95487,
-  2005, 96376,
-  2006, 101567,
-  2007, 104655,
-  2008, 106798,
-  2009, 104513,
-  2010, 109145,
-  2011, 111812,
-  2012, 113171,
-  2013, 115931,
-  2014, 120028,
-  2015, 121384,
-  2016, 127178,
-  2017, 126110
-) %>%
-  mutate(Value = Value/100) %>%
-  ggplot(.,aes(factor(Year), Value)) + theme_steve_web() +
+coffee_imports %>%
+  mutate(imports = imports/100) %>%
+  ggplot(.,aes(factor(year), imports)) + theme_steve_web() +
   geom_bar(stat="identity", color="black", alpha = 0.8, fill="#6f4e37") +
   xlab("") + ylab("Coffee Consumption in Hundreds of Thousands 60kg Bags") +
-  geom_text(aes(label=round(Value, 1)), vjust=-.5, colour="black",
+  geom_text(aes(label=round(imports, 1)), vjust=-.5, colour="black",
             position=position_dodge(.9), size=3, family = "Open Sans") +
   labs(title = "The World is Drinking More and More Coffee",
        subtitle = "Coffee consumption is up over 70% since 1990 in these select countries (i.e. Europe + USA and Japan), suggesting demand for coffee is increasing in rich countries.",
